函数式编程更新

--- a/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6+.md
+++ b/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6+.md
@@ -216,7 +216,7 @@ foo(1, 2, 3)
 //[ 2, 3 ]
 ```
 
-*注意当函数接收不只一个剩余参数的时候，需要把剩余参数放到参数的最后面，而且一个函数只能接收一个剩余参数*
+*注意当函数接收不只一个参数的时候，需要把剩余参数放到参数的最后面，而且一个函数只能接收一个剩余参数*
 
 很多方法函数都是可以接收任意个参数，例如`congsole.log()`，在ES6之前只能在函数中通过`arguments`对象来使用。（这个`arguments`是一个伪数组）
 
