--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-1-函数式编程.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-1-函数式编程.md
@@ -477,8 +477,8 @@ const match = _.curry((reg, string) => string.match(reg))
 const hasSpace = match(/\s+/g)
 const haveNumber = match(/\d+/g)
 
-console.log(hasSpace("hello world")) // [ ' ' ]
-console.log(haveNumber("hello world1")) // [ '1' ]
+// console.log(hasSpace("hello world")) // [ ' ' ]
+// console.log(haveNumber("hello world1")) // [ '1' ]
 
 // 案例值filter
 
@@ -490,4 +490,137 @@ console.log(filter(hasSpace, ['John Connor', 'John_Donne']))
 
 console.log(filter(findSpace, ['John Connor', 'John_Donne']))
 console.log(findSpace(['John Connor', 'John_Donne']))
+```
+
+### 柯里化的实现原理
+
+```javascript
+// 柯里化的实现原理
+function getSum (a, b, c) {
+    return a + b + c
+}
+const curriedGetSum = curry(getSum)
+console.log(curriedGetSum(1, 2, 3))
+console.log(curriedGetSum(1)(2, 3))
+console.log(curriedGetSum(1, 2)(3))
+
+function curry (fn) {
+    return function curriedFunc (...args) {
+        if(args.length < fn.length){
+            // return function (...args1) {
+            //     return curriedFunc(...[...args,...args1])
+            // }
+            return function () {
+                return curriedFunc (...args.concat(Array.from(arguments)))
+            }
+        }
+        return fn(...args)
+    }
+}
+```
+
+### 柯里化总结
+
+- 柯里化可以让我们给一个函数传递较少的参数得到一个已经记住了某些固定参数的新函数
+- 这是一种对函数参数的"缓存"
+- 让函数变得更灵活，让函数的力度更小
+- 
+
+### 函数组合
+
+- 纯函数和柯里化很容易写出洋葱代码 h(g(f(x)))
+    - 获取数组的最后一个元素转换成大写字母， _.toUpper(_.first(_.reverse(array)))
+
+- 函数组合可以让我们把细粒度的函数重新组合生成一个新的函数。
+
+#### 管道
+
+下面这张图表示程序中使用函数处理数据的过程，给fn函数输入一个参数a，返回结果b。可以想想a数据通过一个管道得到一个b数据。
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200525064407180.png)
+
+当fn函数比较复杂的时候，我们可以把函数fn拆分成多个小函数，此时多了中间运算过程中产生的m和n。
+
+下面这张图可以想象成把fn这个管道拆分成了3个管道f1,f2,f3,数据a通过管道f3得到结果m，m通过管道f2得到结果n，n通过管道f1得到结果b。
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200525064411208.png)
+
+组合函数会忽略小管道处理数据的过程中产生的中间值，只关心开始的输入和最终的输出。
+
+```
+fn compose(f1, f2, f3)
+b = fn(a)
+```
+
+#### 函数组合
+
+- 函数组合（compose）：如果一个函数要经过多个函数处理才能得到最终值，这个时候可以把中间过程的函数合并成一个函数。
+
+    - 函数就像是数据的管道，函数组合就是把这些管道连接起来，让数据穿过多个管道形成最终结果。
+    - **函数组合默认是从右到左执行**。
+
+```javascript
+// 函数组合演示
+function compose (f, g) {
+    return function (value) {
+        return f(g(value))
+    }
+}
+
+const composeFn = compose(_.first, _.reverse)
+console.log(composeFn([1, 2, 3, 4])
+)
+```
+
+### lodash中的组合函数
+
+- lodash 中的组合函数 flow() 或者 flowRight() ,他们都可以组合多个函数。
+- flow() 是从左到右执行。
+- flowRight() 是从右到左执行，使用的更多一些。
+
+```javascript
+//lodash的组合函数
+
+const _ = require("lodash")
+
+const reverse = array => array.reverse()
+const first = array => array[0]
+const toUpper = string => string.toUpperCase()
+
+const composeFn = _.flowRight(toUpper, first, reverse)
+console.log(composeFn(['one', 'two', 'three']))
+```
+
+### lodash组合函数原理
+
+```javascript
+const reverse = array => array.reverse()
+const first = array => array[0]
+const toUpper = string => string.toUpperCase()
+
+// const compose = function (...args) {
+//     return function (value) {
+//         return args.reduceRight(function (acc, fn) {
+//             return fn(acc)
+//         }, value)
+//     }
+// }
+
+// 箭头函数的写法
+const compose = (...args) => value => args.reduceRight((acc, fn) => fn(acc), value)
+
+const composeFn = compose(toUpper, first, reverse)
+console.log(composeFn(['one', 'two', 'three']))
+```
+
+### 函数组合-结合律
+
+- 函数组合要满足结合律（associativity）：我们既可以把 g 和 h 组合，还可以把 f 和 g 组合，结果都是一样的。
+
+```javascript
+// 结合律（associativity）
+
+let f = compose(f, g, h)
+let associative = compose(compose(f, g), h) == compose(f, compose(g, h))
+// true
 ```
