函数式编程完善

--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-1-函数式编程.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-1-函数式编程.md
@@ -624,3 +624,140 @@ let f = compose(f, g, h)
 let associative = compose(compose(f, g), h) == compose(f, compose(g, h))
 // true
 ```
+
+### 函数组合——练习
+
+```javascript
+// NEVER SAY DIE   --->   never-say-die
+
+const _ = require('lodash')
+let str = 'NEVER SAY DIE'
+
+// // 先柯里化(函数组合只能组合一元函数)
+// const split = splitChar => str => _.split(str, splitChar)
+// const splitStrWidthSpace = split(' ')
+
+// const join = joinChar => array => _.join(array, joinChar)
+// const joinArrayWithHyphen = join('-')
+
+// // 函数组合
+// const formattingStr = _.flowRight(_.toLower, joinArrayWithHyphen, splitStrWidthSpace)
+
+// console.log(formattingStr(str))
+
+
+// 老师的思路（姜还是老的辣一点点）
+
+const split = _.curry((splitChar, str)  => _.split(str, splitChar))
+const join = _.curry((joinChar, array) => _.join(array, joinChar))
+
+const formattingStr = _.flowRight(_.toLower, join('-'), split(' '))
+
+console.log(formattingStr(str))
+```
+
+### 函数组合——调试
+
+函数组合不会对外暴露计算的中间值，在外面并不能打印中间值来检查在处理数据的那一步出了问题。
+
+可以定义一个打印中间值的一元函数，将这个函数加到组合函数中，打印我们想要的组合函数中间值。
+
+```javascript
+const log = middleValue => {
+    console.log(middleValue)
+    return middleValue
+}
+```
+
+为了清楚的知道打印的中间值是函数组合中的哪一步的中间值，可以给 log 函数添加一个标签参数，调用的时候给打印的中间值添加一个标签。
+
+```javascript
+const trace = _.curry((tag, middleValue) => {
+    console.log(tag, middleValue)
+    return middleValue
+})
+```
+
+### Lodash中的FP模块
+
+前面的练习中可以看到，在使用 lodash 函数进行函数组合处理的时候，很多情况都需要对lodash的二次封装，就很烦。
+
+- lodash/fp
+
+lodash 的 fp 模块提供了实用的对函数式编程友好的方法
+
+```javascript
+// NEVER SAY DIE   --->   never-say-die
+
+const _ = require('lodash')
+const fp = require('lodash/fp')
+
+const formattingStr = _.flowRight(_.toLower, fp.join('-'), fp.split(' '))
+
+let str = 'NEVER SAY DIE'
+
+console.log(formattingStr(str))
+```
+
+### lodash 和 lodash/fp模块中的map的区别
+
+```javascript
+const _ = require('lodash')
+
+console.log(_.map(['23', '8', '10'], parseInt)) // [ 23, NaN, 2 ]
+```
+
+原因：
+- map：
+Creates an array of values by running each element in collection through iteratee. The iteratee is invoked with three arguments: (value, index|key, collection).
+
+- parseInt：
+function parseInt(s: string, radix?: number): number
+Converts a string to an integer.
+`@param` s — A string to convert into a number.
+`@param` radix — A value between 2 and 36 that specifies the base of the number in numString. If this argument is not supplied, strings with a prefix of '0x' are considered hexadecimal. All other strings are considered decimal.
+
+```javascript
+const fp = require('lodash/fp')
+console.log(fp.map(parseInt, ['23', '8', '10'])) // [ 23, 8, 10 ]
+```
+原因：
+- map: <string, number>(iteratee: (value: string) => number, collection: string[] | _.List<string>) => number[] (+13 overloads)
+
+### Point Free
+
+首先，Point Free是一种编程风格。
+
+**Point Free：**我们可以把数据处理的过程定义成与数据无关的合成运算，不需要用到代表数据的那个参数，只要把简单的运算步骤合成到一起，在使用这个模式之前我们需要定义一些辅助的基本函数。
+
+- 不需要指明处理的数据
+- **只需要合成运算过程**
+- 需要定义一些辅助的基本运算函数
+
+```javascript
+_.flowRight(_.toLower, fp.join('-'), fp.split(' '))
+```
+
+函数式编程的核心，把运算过程抽象成函数。Point Free模式就是把抽象出来的函数合成一个新的函数，合成的过程不涉及具体数据，只关心运算过程，也是一个抽象的过程。
+
+```javascript
+// Hello    World ---->  hello_world
+
+const fp = require('lodash/fp')
+
+const f = fp.flowRight(fp.replace(/\s+/g, '_'), fp.toLower)
+console.log(f('Hello    World'))
+```
+在合成 f 的时候并不需要关系传入的具体数据是什么，只需要关心运算过程，然后把每一步的运算过程组合起来就可以了。比如，第一步将字符串转换成小写，然后将字符串中的空格替换成下划线。
+
+#### 练习案例
+
+```javascript
+// 把一个字符串中的首字母提取并转换成大写，使用.作为分隔符
+// world wild web ==>W.W.W
+const fp = require('lodash/fp')
+
+// const f = fp.flowRight(fp.toUpper, fp.join('.'), fp.map(fp.first), fp.split(' '))
+const f = fp.flowRight(fp.join('.'), fp.map(fp.flowRight(fp.toUpper, fp.first)), fp.split(' '))
+console.log(f('world wild web'))
+```
