--- a/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6+.md
+++ b/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6+.md
@@ -177,7 +177,7 @@ console.log(result) //我叫xiaodong，今年18岁
 
 ### 字符串扩展方法
 
-#### 1. String.include()
+#### 1. String.includes()
 
 判断字符串是否包含某个字符串，返回布尔值。
 
