面试题整理

--- a/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6+.md
+++ b/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6+.md
@@ -538,7 +538,7 @@ const person = {
     age:18
 }
 const personProxy = new Proxy(person, {
-    //当这里面的各种处理函数没有被重定义的时候，他们的默认执行方法就是Reflext对象的静态方法
+    //当这里面的各种处理函数没有被重定义的时候，他们的默认执行方法就是Reflect对象的静态方法
     //所以一个标准的写法就是，当我们使用自己重定义的处理函数对对象进行监视和数据处理的时候，最终需要调用一次Reflect的静态方法，来保持执行函数的默认功能。
 })
 ```
