--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-2-函子.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-2-函子.md
@@ -253,3 +253,65 @@ readFile('package.json')
 - of 方法是为了避免使用 new 来创建对象，更深层的含义是把值放到上下文 Context （把值放到容器中，使用 map 来处理值）
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200527080806527.png)
+
+
+### Monad 函子
+
+```js
+// IO Monad
+const fs = require('fs')
+const fp = require('lodash/fp')
+
+class IO {
+  static of (value) {
+    return new IO(function () {
+      return value
+    })
+  }
+
+  constructor (fn) {
+    this._value = fn
+  }
+
+  map (fn) {
+    return new IO(fp.flowRight(fn, this._value))
+  }
+
+  join () {
+    return this._value()
+  }
+
+  flatMap (fn) {
+    return this.map(fn).join()
+  }
+}
+
+let readFile = function (filename) {
+  return new IO(function () {
+    return fs.readFileSync(filename, 'utf-8')
+  })
+}
+
+let print = function (x) {
+  return new IO(function () {
+    console.log(x)
+    return x
+  })
+}
+
+let r = readFile('package.json')
+          // .map(x => x.toUpperCase())
+          .map(fp.toUpper)
+          .flatMap(print)
+          .join()
+
+console.log(r)
+```
+
+2020年5月28日16:52:03对于上面这段代码的体会，真香~。
+
+Monad 函子其实就是对 Pointed 函子的升级。
+
+- Pointed 函子只能接收函数去链式的实现自己想要的逻辑运算。如果要在中间使用函子的话，就会出现函子嵌套，从而导致链式调用好几次`._value()`这个方法才能得到最终的运算结果。
+
+- Monad 函子就解决了 Pointed 函子的这个短板。Monad 函子里面增加了一个 flatMap 方法，当我们传给函子的参数不是一个单纯的纯函数而是一个函子的时候，我们就可以使用这个 flatMap 方法，这个方法就会调用前面的 map 之后自动的去执行函子中新增的另一个 join 方法去自动地调用最外层的函子。当我们传的不是一个函子而是一个单纯的纯函数的时候，就还是调用之前的 map 方法。这样就会出现一种现象，不管我们在中间是传入了函数还是函子，最终我们得到的总是一个没有嵌套的函子，要想得到这个函子的 _value 计算的结果就可以直接调用 join 方法。
