--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-2-函子.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-2-函子.md
@@ -258,6 +258,45 @@ readFile('package.json')
 ### Monad 函子
 
 ```js
+// Monad 函子是可以变扁的 Pointed 函子
+// 一个函子如果具有 join 和 of 两个方法并遵守一些定律就是一个 Monad 函子
+const fs = require('fs')
+const fp = require('lodash/fp')
+class IO {
+    static of (value) {
+        return new IO(function() {
+            return value 
+        }) 
+    }
+
+    constructor (fn) {
+        this._value = fn
+    }
+
+    map (fn) {
+        return new IO(fp.flowRight(fn, this._value))
+    }
+}
+
+const readFile = function (url) {
+    return new IO (function () {
+        return fs.readFileSync(url, 'utf-8')
+    })
+}
+
+const print = function (x) {
+    return new IO (function() {
+        console.log(x)
+        return x
+    })
+}
+const cat = fp.flowRight(print, readFile)
+// IO(IO(x))
+const r = cat('package.json')._value()._value()
+console.log(r)
+```
+
+```js
 // IO Monad
 const fs = require('fs')
 const fp = require('lodash/fp')
@@ -315,3 +354,7 @@ Monad 函子其实就是对 Pointed 函子的升级。
 - Pointed 函子只能接收函数去链式的实现自己想要的逻辑运算。如果要在中间使用函子的话，就会出现函子嵌套，从而导致链式调用好几次`._value()`这个方法才能得到最终的运算结果。
 
 - Monad 函子就解决了 Pointed 函子的这个短板。Monad 函子里面增加了一个 flatMap 方法，当我们传给函子的参数不是一个单纯的纯函数而是一个函子的时候，我们就可以使用这个 flatMap 方法，这个方法就会调用前面的 map 之后自动的去执行函子中新增的另一个 join 方法去自动地调用最外层的函子。当我们传的不是一个函子而是一个单纯的纯函数的时候，就还是调用之前的 map 方法。这样就会出现一种现象，不管我们在中间是传入了函数还是函子，最终我们得到的总是一个没有嵌套的函子，要想得到这个函子的 _value 计算的结果就可以直接调用 join 方法。
+
+**Monad 函子的使用**
+
+当一个函数返回一个函子的时候我们就要考虑使用monad，monad可以解决函子嵌套的问题，如果想要合并一个函数，并且这个函数返回的是一个值，就可以调用map方法；如果想要合并一个函数，这个函数返回的是一个函子，就要使用flatmap。
