排除错别字

--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-1-函数式编程.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-1-函数式编程.md
@@ -325,9 +325,9 @@ console.log(_.findIndex(arr, item => {
 ```
 ### 纯函数的优势
 
-- 可缓存（可以提高函数的行能）
+- 可缓存（可以提高函数的性能）
 
-    - 因为纯函数对于相同的输入始终又相同的结果，所以可以把纯函数的结果缓存起来 
+    - 因为纯函数对于相同的输入始终有相同的结果，所以可以把纯函数的结果缓存起来 
 
 ```javascript
 const _ = require('lodash') 
@@ -367,15 +367,15 @@ const memoize = function (fn)  {
 
     - 纯函数可以让测试更加方便
     
-    因为单元测试就是在断言程序的执行结果，而纯函数始终都有输入和输出，所以所有的纯函数都是可以测试的函数。
+    **因为单元测试就是在断言程序的执行结果，而纯函数始终都有输入和输出，所以所有的纯函数都是可以测试的函数。**(what is unit test?)
 
 - 并行处理
 
-    - 在多线程环境下并行操作共享的内存数据很可能会出现意外情况。纯函数下不需要访问共享的内存数据，所以在并行环境下可以任意运行纯含数（Web Work）
+    - 在多线程环境下并行操作共享的内存数据很可能会出现意外情况。纯函数下不需要访问共享的内存数据，所以在并行环境下可以任意运行纯函数（Web Work）
 
-    因为纯函数是一个封闭的空间，它只依赖于自己的参数，不需要访问共享的内存数据，所以在并行的情况下依然可以任意的运行纯函数。
+    - 因为纯函数是一个封闭的空间，它只依赖于自己的参数，不需要访问共享的内存数据，所以在并行的情况下依然可以任意的运行纯函数。
 
-    ES6以后新增的webwork可以开启多个线程。但是在js多数的情况下还是以单线程为主。
+    - ES6以后新增的webwork可以开启多个线程。但是在js多数的情况下还是以单线程为主。
 
 
 ### 副作用
@@ -506,7 +506,7 @@ console.log(curriedGetSum(1, 2)(3))
 
 function curry (fn) {
     return function curriedFunc (...args) {
-        if(args.length < fn.length){
+        if(args.length < fn.length){ // fn.length就是fn这个函数的形参的个数
             // return function (...args1) {
             //     return curriedFunc(...[...args,...args1])
             // }
