--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-2-函子.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-2-函子.md
@@ -63,7 +63,7 @@ let r = Container.of(5)
 - 想要处理盒子中的值，我们需要给盒子的 map 方法传递一个处理值的函数（纯函数），有这个函数来对值进行处理。
 - 最终map方法返回一个包含新值的盒子（函子）。
 
-有多少运算就有多少函子，可以使用不用的汉字来解决不同的问题。
+有多少运算就有多少函子，可以使用不用的函子来解决不同的问题。
 
 ```javascript
 // 演示null undefined 的问题
