--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-7-代码优化介绍.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-7-代码优化介绍.md
@@ -20,13 +20,79 @@
 - 全局执行上下文一直存活于上下文执行栈，直到程序退出
 - 如果某个局部作用域出现了同名变量则会遮蔽或污染全局
 
+```js
+var i, str = ''
+for (i = 0; i < 1000; i++){
+    str += i
+}
+
+for (let i = 0; i < 1000; i ++){
+    let str = ''
+    str += i
+}
+```
+
 ### 缓存全局变量
 
 很多时候全局变量都是无法避免的，比如果当获取DOM元素的时候必须使用document，document本身就内置到了全局执行上下文中，所以这种情况下，我们就可以将这个会大量使用的全局变量放到某一个全局变量当中，从而达到一种缓存的效果。
 
+```html
+<body>
+    <button vaule="btn1" id="btn1"></button>
+    <button vaule="btn2" id="btn2"></button>
+    <p>sdsa</p>
+    <button vaule="btn3" id="btn3"></button>
+    <div>fdksjfb</div>
+    <button vaule="btn4" id="btn4"></button>
+    <button vaule="btn5" id="btn5"></button>
+    <button vaule="btn6" id="btn6"></button>
+    <p>sdsakjfh</p>
+    <button vaule="btn7" id="btn7"></button>
+    <button vaule="btn8" id="btn8"></button>
+    <div>dhsjkdf</div>
+    <button vaule="btn9" id="btn9"></button>
+    <button vaule="btn10" id="btn10"></button>
+
+    <script>
+        function getBtn () {
+            let btn1 = document.getElementById('btn1')
+            let btn3 = document.getElementById('btn3')
+            let btn5 = document.getElementById('btn5')
+            let btn7 = document.getElementById('btn7')
+            let btn9 = document.getElementById('btn9')
+        }
+
+        function getBtn2 () {
+            const doc = document
+            let btn2 = doc.getElementById('btn2')
+            let btn4 = doc.getElementById('btn4')
+            let btn6 = doc.getElementById('btn6')
+            let btn8 = doc.getElementById('btn8')
+            let btn10 = doc.getElementById('btn10')
+        }
+    </script>
+</body>
+```
+
 ### 通过原型对象添加附加方法
 
 在原型对象上面新增实例对象所需要的方法，不要再构造函数上面添加。
+
+```js
+var fn1 = function () {
+    this.foo = function () {
+        console.log(11111)
+    }
+}
+let f1 = new fn1()
+
+var fn2 = function () {}
+fn2.prototype.foo = function () {
+    console.log(11111)
+}
+
+let f2 = new fn2()
+```
 
 ### 避开闭包陷阱
 
@@ -34,12 +100,51 @@
 - 闭包使用不当会造成内存泄漏
 - 不要为了闭包而闭包
 
+```js
+function test (func) {
+    console.log(func())
+}
+
+function test2 () {
+    const name = "xiaodong"
+    return name
+}
+
+test(function () {
+    const name = "xiaodong"
+    return name
+})
+
+test(test2)
+```
+
 ### 避免属性访问方法使用
 
 **JavaScript 中的面向对象**
 
 - JS不需要属性访问方法，所有的属性都是外部可见的
 - 使用属性访问方法只会增加一层重定义，没有访问的控制力
+
+```js
+function Person () {
+    this.name = 'xiaodong'
+    this.age = 18
+    this.getAge = function () {
+        return this.age
+    }
+}
+
+const p1 = new Person()
+const age1 = p1.getAge()
+
+function Person () {
+    this.name = 'xiaodong'
+    this.age = 18
+}
+
+const p2 = new Person()
+const age2 = p2.age
+```
 
 ### For循环的优化
 
