错别字修正

--- a/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-5-V8引擎.md
+++ b/Part 1 · JavaScript 深度剖析/module2·函数式编程与 JavaScript 性能优化/1-2-5-V8引擎.md
@@ -10,9 +10,9 @@
 
 在程序的使用过程中，会用到很多的数据，这些数据可以分为原始数据和对象类型的数据，对于基础的原始数据都是由程序的语言自身来控制的，所以这里说的回收主要指的时当前堆里的对象数据，所以这个过程时离不开内存操作的。
 
-- 采用分代回收的思想（是由V8 内存设限决定的）
+- 采用分代回收的思想（是由 V8 内存设限决定的）
 - 内存分为新生代和老生代
-- 针对不同对象采用同的GC算法
+- 针对不同对象采用不同的GC算法
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200530110920509.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_16,color_FFFFFF,t_70)
 
