--- a/Part 2 · 前端工程化实践/2-2-1-脚手架工具.md
+++ b/Part 2 · 前端工程化实践/2-2-1-脚手架工具.md
@@ -23,3 +23,60 @@
 - yeoman
 - plop
 
+### Yeoman
+
+#### 基本使用
+
+- **检查环境**
+
+```
+node -v
+npm -v
+yarn -v
+```
+
+- **全局安装**
+
+```
+yarn global add yo
+```
+
+- **安装Generator**
+
+```
+yarn global add generator-node
+```
+
+```
+mkdir my-module
+cd my-module\
+yo node
+```
+
+### Sub Generator
+
+```
+yo node:cli
+```
+
+```
+yarn link
+yarn 
+my-module --help
+```
+
+### 使用步骤总结
+
+1. 明确你的需求
+2. 找到合适的Generator
+3. 全局范围安装找到的Genetator
+4. 通过Yo运行对应的Generator
+5. 通过命令行交互填写选项
+6. 生成你所需要的项目结构
+
+#### 安装一个webapp
+
+```
+yarn global add generator-webapp
+yo webapp
+```
