--- a/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6 新特性.md
+++ b/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6 新特性.md
@@ -402,7 +402,7 @@ console.log(Object.is(NaN, NaN)) // true
 
 英文翻译是代理人。
 
-在ES6之前可以使用ES5提供的`Object.defaultProperty()`方法来给对象添加属性，并捕获属性的读写过程。比如说vue3.0之前的版本就是使用这个方法实现的数据响应从而完成数据的双向绑定。ES6的`Proxy`就是专门为对象来添加代理器的，我们可以使用`Proxy`生成的对象的代理对象来捕获对象属性的读写，并在这个过程中还可以进行一些其他的数据处理操作。
+在ES6之前可以使用ES5提供的`Object.defineProperty()`方法来给对象添加属性，并捕获属性的读写过程。比如说vue3.0之前的版本就是使用这个方法实现的数据响应从而完成数据的双向绑定。ES6的`Proxy`就是专门为对象来添加代理器的，我们可以使用`Proxy`生成的对象的代理对象来捕获对象属性的读写，并在这个过程中还可以进行一些其他的数据处理操作。
 
 ```javascript
 const person = {
@@ -492,7 +492,7 @@ construct | 用new调用一个函数
 
 **2. Proxy可以更好的支持数组对象的监视**
 
-之前通过Object.defineProperty监视数组最常见的方式就是通过重新数组的操作方法，这也是vue中使用的方式，大体的思路就是通过自定义的方法去覆盖掉数组原型对象上的push、shift等方法，以此去劫持对应的方法调用的过程。
+之前通过Object.defineProperty监视数组最常见的方式就是通过更新数组的操作方法，这也是vue中使用的方式，大体的思路就是通过自定义的方法去覆盖掉数组原型对象上的push、shift等方法，以此去劫持对应的方法调用的过程。
 
 ```javascript
 const arr = []
@@ -519,7 +519,7 @@ TypeError: 'set' on proxy: trap returned falsish for property '0'
 
 **3. Proxy是以非侵入的方式监管了对象的读写**
 
-即，不需要对对象本身去做任何的操作，就可以监视到它内不成员的读写；而Object.defineProperty就需要通过特定的方式单独去定义对象当中那些需要被监视的属性。
+即，不需要对对象本身去做任何的操作，就可以监视到它内部成员的读写；而Object.defineProperty就需要通过特定的方式单独去定义对象当中那些需要被监视的属性。
 
 ### Reflect
 
