vue 响应式原理

--- a/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-9-Vue 响应式原理模拟.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-9-Vue 响应式原理模拟.md
@@ -244,7 +244,7 @@ class Compiler {
 }
 ```
 
-## Dep 实现
+## Dep 实现（dependence）
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200706231529970.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
 
@@ -257,5 +257,17 @@ class Compiler {
 
     ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200706231730405.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
 
+Dep 在 getter 中收集观察者，在 setter 中通知观察者调用观察者的 update 方法。
 
+## Watcher 实现
 
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200707073824447.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
+
+- 功能
+
+  - 当数据变化触发依赖，dep 通知所有的 Watcher 实例更新视图
+  - 自身实例化的时候往 dep 对象中添加自己
+
+- 结构
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2020070707440192.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
