Vue 响应式原理

--- a/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-9-Vue 响应式原理模拟.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-9-Vue 响应式原理模拟.md
@@ -92,6 +92,10 @@ class Vue {
 2. 当给 data 中的属性新赋值的时候，如果这个新赋值的数据是一个对象，需要将这个新赋值的对象属性中的属性转换成响应式数据。
 
 ```js
+// 在 Observer 中需要特别注意的两个问题
+// 1. 当 data 中的其中一个属性是对象的时候，需要将这个对象中的属性也转换成响应式的数据
+// 2. 当给 data 中的属性新赋值的时候，如果这个新赋值的数据是一个对象，需要将这个新赋值的对象属性中的属性转换成响应式数据。
+
 class Observer {
   constructor (data) {
     this.walk(data)
@@ -104,10 +108,12 @@ class Observer {
       this.defineReactive(data, key, data[key])
     })
   }
-  // 疑问？为什么传入了对象以及对象的键，还需要传入对象的键值，而不能直接通过 obj[key] 获取。
+  // 疑问？问什么传入了对象以及对象的键，还需要传入对象的键值，而不能直接通过 obj[key] 获取。
   // 这里是因为，当我们通过 this.msg 获取数据的时候会触发 Vue 对应属性的 getter 去获取 data[key] 这样就会触发 data 中的 getter ，如果在这个 getter 中使用 data[key] 获取数据，那么就又会触发 data 中该属性的 getter 方法，造成死递归，这个时候就会出现栈溢出的错误。
   defineReactive (obj, key, val) {
     let that = this
+    // 收集依赖，并发送通知
+    let dep = new Dep()
     // 如果该属性是一个对象，将这个对象中的属性转换成响应式数据
     this.walk(val)
     Object.defineProperty(obj, key, {
@@ -118,6 +124,7 @@ class Observer {
       // 当前方法的参数 obj 实际上就是 vue.$data这个属性，$data中引用了这个 get 方法，也就是说，这个 get 方法在外部是存在引用的，而 get 中又会引用 val 这个值，所以这里就会发生闭包，使得这里的 val 不会被释放掉。
       // 这里使用闭包扩展了 val 这个变量的作用域
       get () {
+        Dep.target && dep.addSub(Dep.target)
         return val
       },
       set (newValue) {
@@ -127,6 +134,7 @@ class Observer {
         // 在这个函数执行的时候，该函数会产生一个执行上下文，这个执行上下文中的 this 指向 obj，所以这里想要调用 walk 方法，需要提前获取外层作用域中的 this
         that.walk(newValue)
         // 发送通知
+        dep.notify()
       }
     })
   }
@@ -201,16 +209,25 @@ class Compiler {
 
   update (node, key, attrName) {
     let updateFn = this[attrName + 'Updater']
-    updateFn && updateFn(node, this.vm[key])
+    updateFn && updateFn.call(this, node, this.vm[key], key)
   }
 
   // 处理 v-text 指令
-  textUpdater (node, val) {
+  textUpdater (node, val, key) {
     node.textContent = val
+    new Watcher(this.vm, key, newValue => {
+      node.textContent = newValue
+    })
   }
   // 处理 v-model 指令
-  modelUpdater (node, val) {
+  modelUpdater (node, val, key) {
     node.value = val
+    new Watcher(this.vm, key, newValue => {
+      node.value = newValue
+    })
+    node.addEventListener('input', () => {
+      this.vm[key] = node.value
+    })
   }
 
   // 编译文本节点，处理插值表达式
@@ -218,7 +235,7 @@ class Compiler {
     // console.dir(node)
     // {{  msg }}
     // 点是匹配任意的单个字符不包含换行
-    // 加号是匹配前面修饰前面的内容出现一次或者多次
+    // 加号是匹配前面修饰的内容出现一次或者多次
     // 问号是非贪婪模式，尽可能早的结束匹配
     let reg = /\{\{(.+?)\}\}/
     let value = node.textContent
@@ -226,6 +243,11 @@ class Compiler {
       // 第一个匹配的内容
       let key = RegExp.$1.trim()
       node.textContent = value.replace(reg, this.vm[key])
+
+      // 创建 watcher 对象，当数据发生变化的时候更新视图
+      new Watcher(this.vm, key, newValue => {
+        node.textContent = newValue
+      })
     }
   }
   // 判断元素属性的名字是否是一个vue指令
@@ -259,6 +281,25 @@ class Compiler {
 
 Dep 在 getter 中收集观察者，在 setter 中通知观察者调用观察者的 update 方法。
 
+```js
+class Dep {
+  constructor () {
+    // 存储所有的观察者
+    this.subs = []
+  }
+  // 添加观察者
+  addSub (sub) {
+    sub && sub.update && this.subs.push(sub)
+  }
+  // 发布消息
+  notify () {
+    this.subs.forEach(sub => {
+      sub.update()
+    })
+  }
+}
+```
+
 ## Watcher 实现
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200707073824447.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
@@ -271,3 +312,29 @@ Dep 在 getter 中收集观察者，在 setter 中通知观察者调用观察者
 - 结构
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/2020070707440192.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
+
+```js
+class Watcher {
+  constructor (vm, key, cb) {
+    this.vm = vm
+    // data 中的属性名称
+    this.key = key
+    // 回调函数，负责更新视图
+    this.cb = cb
+    // 当创建 watcher 对象的时候，将当前创建的 watcher 对象添加到 dep 的 subs 数组中
+    // 把 Watcher 对象记录到 dep 类的属性 target 中
+    Dep.target = this
+    // 触发 get 方法，在 get 方法中调用 addsub
+    this.oldValue = vm[key]
+    // 添加完成之后将 target 设置为空，防止重复添加
+    Dep.target = null
+  }
+  // 当数据发生变化的时候，更新视图
+  update () {
+    let newValue = this.vm[this.key]
+    if (newValue === this.oldValue) return
+    this.cb(newValue)
+    this.oldValue = newValue
+  }
+}
+```
