vue 响应式原理补充

--- a/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-9-Vue 响应式原理模拟.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-9-Vue 响应式原理模拟.md
@@ -338,3 +338,22 @@ class Watcher {
   }
 }
 ```
+
+## 总结
+
+- 问题
+
+    - 给属性重新赋值成对象，是否是响应式的？（当然是）
+    - 给 Vue 实例新增一个成员是否是响应式的？(当然不是，官方文档有办法解决，调用 this.$set )
+
+- 通过下图回顾整体流程
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200709203930735.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_1,color_FFFFFF,t_70)
+
+- 首先创建一个 Vue 对象，记录 options 传入的选项，调用 proxyData 将 data 中的属性注入到 Vue 实例中。
+
+- 创建一个 Observer 和 Compiler
+
+  - 在 Observer 中进行数据劫持，将 data 中的属性转换成 getter/setter ,当数据变化的时候也就是触发 setter 的时候通知变化调用 Dep 的 notify 方法发送通知，调用 Watcher 中的 update 方法更新视图。
+
+  - Compiler 中解析插值表达式以及 vue 指令，在页面首次加载的时候会调用 Compiler 中的相关方法，去更新视图，同时还会去订阅数据的变化绑定更新函数，当数据变化的时候更新视图。
