--- a/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-03-Vue.js 源码阅读-初始化过程.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-03-Vue.js 源码阅读-初始化过程.md
@@ -14,7 +14,7 @@
   - 注册和平台相关的全局指令：v-model、v-show
   - 注册和平台相关的全局组件：v-transition、v-transition-group
   - 全局方法
-    - __patch__: 把虚拟 DOM 转换成真实 DOM
+    - \__patch\__: 把虚拟 DOM 转换成真实 DOM
     - $mount: 挂载方法
 
 - src/core/index.js
