--- a/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6 新特性.md
+++ b/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6 新特性.md
@@ -856,7 +856,7 @@ for(item of obj){
 
 **可迭代接口Iterable的实现**是for...of遍历的前提，反过来说能用for...of遍历的数据结构内部都已经实现了这个可迭代的接口。 
 
-for...of循环的实现原理,就是去调用被便利对象的iterator方法得到一个迭代器，然后循环执行这个迭代器的next()方法去遍历所有的数据。
+for...of循环的实现原理,就是去调用被遍历对象的iterator方法得到一个迭代器，然后循环执行这个迭代器的next()方法去遍历所有的数据。
 
 ```javascript
 const s = new Set([1, 2, 3])
