--- a/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-05-Vue.js 源码阅读-初始化过程-实例成员.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-05-Vue.js 源码阅读-初始化过程-实例成员.md
@@ -1,6 +1,6 @@
 # Vue 初始化的过程-实例成员
 
-在 core/instance/index.js 中定义了 Vue 的构造函数，Vue 的实例成员就从这个文件开始讲起，在这里面它给 Vue 的原型挂载了一系列的成员。
+在 core/instance/index.js 中定义了 Vue 的构造函数，并且通过给 Vue 的原型挂载了一系列的成员的方式添加了一系列的实例成员。
 
 ```js
 // core/instance/index.js
@@ -83,6 +83,9 @@ Vue.prototype.$delete = del
 Vue.prototype.$watch = function (){}
 ```
 
+1. 首先通过 defineProperty 给 Vue 的原型上面挂载了两个属性 $data,  $props ,同时给这两个属性添加了 setter/getter 。
+2. 在原型上挂载 $set $delete 和 $watch 
+
 ## eventsMixin
 
 ```js
@@ -97,3 +100,26 @@ export function eventsMixin (Vue: Class<Component>) {
   Vue.prototype.$emit = function (event: string): Component {}
 }
 ```
+
+实现了，Vue 事件相关的方法。原理就是通过 发布订阅模式，当触发事件的时候，遍历订阅者数组，调用所有订阅者的回调函数处理事件。
+
+## lifecycleMixin
+
+```js
+export function lifecycleMixin (Vue: Class<Component>) {
+  // _update 方法的作用是把 VNode 渲染成真实 DOM
+  // 首次渲染会调用，数据更新会调用
+  Vue.prototype._update = function (vnode: VNode, hydrating?: boolean) { }
+
+  Vue.prototype.$forceUpdate = function () { }
+
+  Vue.prototype.$destroy = function () { }
+}
+```
+
+_update 的核心就是通过调用 __patch__ 这个方法，把虚拟 DOM 转换成真实 DOM 并挂载到 vm.$el 里面。如果是首次渲染会直接渲染到 $el ，如果不是首次渲染而是数据发生了变化，就会对比 preVNode 和 vnode 通过 diff 算法对比差异渲染真实 DOM。
+
+## renderMixin
+
+混入了 $nextTick 和 _render 函数，_render 函数的作用是调用用户传入的 render 或者是 template 通过 $mount 转换成的 render 。
+
