--- a/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-06-Vue.js 源码阅读-初始化过程-实例成员-initState.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-06-Vue.js 源码阅读-初始化过程-实例成员-initState.md
@@ -22,6 +22,8 @@
  - 然后判断 key 是否在 vm 中存在，并且是不是以 _ 或 $ 开头，如果存在或者是以 _ 或 $ 开头，发出警告。（所有以 _ 开头的成员都是静态成员，以 $ 开头的成员都是 vue 提供的成员，所以不建议以 _ 或 $ 开头）。
 最后，把 method 注入到 vm 上，注入之前判断是否是一个 function ,如果不是 noop ，如果是注入。
 
+**initMethods的作用是把选项中的 methods 注入到 Vue 实例中，在注入之前会先判断命名是否在 props 中有重名的属性**
+
 ## initData(vm, opts.data)
 
 首先判断是否传入了 data 属性，如果没有，初始化一个空对象并通过调用 observer 这个函数将这个对象转换成响应式的对象，如果有，调用 initData 。
