--- a/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-06-Vue.js 源码阅读-初始化过程-实例成员-initState.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-06-Vue.js 源码阅读-初始化过程-实例成员-initState.md
@@ -31,7 +31,7 @@
 在这个方法中，首先，判断 data 是否是一个 function ，如果是（组件中的 data），调用这个 function 获取它的返回值。然后对数据进行处理
 
 - 判断 data 中的成员是否和 methods 和 props 中的成员重名，如果有，发出警告（在 development 下）。
-- 判断是狗以 _ 或 $ 开头，如果是不会注入，否则调用 proxy 将属性注入到 vm 中。
+- 判断是否以 _ 或 $ 开头，如果是不会注入，否则调用 proxy 将属性注入到 vm 中。
 
 在这个方法中，会将 data 中的成员转换成响应式数据，并且注入到 vm 中。
 
