--- a/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-07-Vue.js 源码阅读-初始化过程-实例成员-initState.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module2 · Vue.js 源码分析/3-2-07-Vue.js 源码阅读-初始化过程-实例成员-initState.md
@@ -1,4 +1,4 @@
-# Vue 初始化的过程-实例成员-initState
+# Vue 初始化过程-实例成员-initState
 
 这个方法中将实例中的 $options 中的 props、methods、data、computed、watch 通过对应的 init 方法进行初始化。
 
