错别字以及目录调整

--- a/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6 新特性.md
+++ b/Part 1 · JavaScript 深度剖析/module1·ES 新特性与 JS 异步编程、TypeScript/1-1-1-ES6 新特性.md
@@ -111,7 +111,7 @@ console.log(a,b);//1,0
 2. 使用解构交换两个变量的值
 
 ```javascript
-let [a, b] = [1, 2];//注意这里的省略号不能省略
+let [a, b] = [1, 2];//注意这里的分号不能省略
 [a, b] = [b ,a]
 console.log(a, b) //2, 1
 ```
@@ -228,7 +228,7 @@ console.log(arr) //[1, 2, 3]
 console.log.apply(console, arr) //1 2 3
 console.log(...arr) //1 2 3
 ```
-这里解释一下第二行为什么输出结果是这个，其实这是一个取巧的方法，利用的是apply接收参数为一个数组的特性，当调用console.log这个方法，并把this只想console然后将arr这个数组传给了更改this指向的console.log方法，自然而然地也就会将数组逐个打印出来了。
+这里解释一下第二行为什么输出结果是这个，其实这是一个取巧的方法，利用的是apply接收参数为一个数组的特性，当调用console.log这个方法，并把this指向console然后将arr这个数组传给了更改this指向的console.log方法，自然而然地也就会将数组逐个打印出来了。
 
 ### 箭头函数
 
@@ -508,7 +508,7 @@ arrProxy.push(233)
 
 下标的值是Proxy自己推算出来的。
 
-这里着重提一下最后一行的`turn true`。
+这里着重提一下最后一行的`return true`。
 
 在照敲代码的时候漏写了这最后的`return`，导致报错:
 
@@ -590,7 +590,7 @@ xiaodong.say() // my name is xiaodong
 ```
 
 ### 静态方法
- 
+
 与之相对应的概念叫实例方法，实例方法是通过这个类型构造的实例对象去调用；对象方法是直接通过类型本身去调用就可以。
 
 之前我们定义静态方法是直接在构造函数的对象上挂载方法，因为js中函数也是一个对象，也可以给这个对象添加一些方法成员。
