--- a/Part 2 · 前端工程化实践/module1·开发脚手架与自动化构建工作流封装/2-1-1-工程化概述.md
+++ b/Part 2 · 前端工程化实践/module1·开发脚手架与自动化构建工作流封装/2-1-1-工程化概述.md
@@ -1,6 +1,6 @@
 ## 工程化的定义和主要解决的问题
 
-再前端的开发过程中常常会遇到下面的问题，工程化可以很好的解决。
+在前端的开发过程中常常会遇到下面的问题，工程化可以很好的解决。
 
 - 想要使用ES6新特性，但是兼容性有问题
 - 想要使用less / Sass / PostCSS增强CSS的编程性，但是运行环境不能直接支持
@@ -10,7 +10,7 @@
 - 部分功能开发时需要等待后端服务接口提前完成
 
 ## 一个项目过程中工程化的表现
- 
+
 创建 ——> 编码 ——> 预览/测试 ——> 提交——> 部署
 
 1. 创建项目的时候可以直接使用脚手架工具完成项目的搭建
