--- a/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-06-Vue 数据驱动.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-06-Vue 数据驱动.md
@@ -3,7 +3,7 @@
 在学习 Vue 的时候经常会看到三个词，数据响应式、双向绑定、数据驱动。
 
 - 数据响应式
-    
+  
     - 数据就是指的数据模型，仅仅是普通的 JavaScript 对象，而当我们修改数据时，视图会进行更新，避免了繁琐的 DOM 操作，提高开发效率。
 
 - 双向绑定
@@ -13,7 +13,7 @@
 
 - 数据驱动
 
-    - 数据驱动时 Vue 最独特的特性之一。
+    - 数据驱动是 Vue 最独特的特性之一。
     - 开发过程中只需要关注数据本身，不需要关心数据是如何渲染到视图。
 
 ## 数据响应式的核心原理
