--- a/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-09-Vue 响应式原理模拟.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-09-Vue 响应式原理模拟.md
@@ -185,7 +185,7 @@ class Compiler {
         this.compileElement(node)
       }
 
-      // 判断 node 节点是否又子节点，如果有子节点，要递归调用 compile ，实现全部节点的遍历
+      // 判断 node 节点是否有子节点，如果有子节点，要递归调用 compile ，实现全部节点的遍历
       if (node.childNodes && node.childNodes.length) {
         this.compile(node)
       }
