--- a/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-07-发布订阅模式.md
+++ b/Part 3 · Vue.js 框架源码与进阶/module1 · 手写 Vue Router、手写响应式实现、虚拟 DOM 和 Diff 算法/3-1-07-发布订阅模式.md
@@ -8,7 +8,7 @@
   - 发布者
   - 信号中心
 
-> 我们假定，存在一个"信号中心"，某个任务执行完毕，就向信号中心"发布"(publish)一个信号，其他任务可以向信号中心"订阅"(subscribe)这个信号，从开知道什么时候自己可以执行。这就叫做**"发布/订阅模式"(publish-subscribe pattern)**\
+> 我们假定，存在一个"信号中心"，某个任务执行完毕，就向信号中心"发布"(publish)一个信号，其他任务可以向信号中心"订阅"(subscribe)这个信号，从而知道什么时候自己可以执行。这就叫做**"发布/订阅模式"(publish-subscribe pattern)**
 
 ### 从自定义事件中看订阅/发布模式
 
